--- a/008.game2048/css/game2048.css
+++ b/008.game2048/css/game2048.css
@@ -108,10 +108,14 @@ a:hover,a:active,a:focus{ text-decoration:none;} /* 取消a标签点击后的虚
 	transform: translate(-50%,-50%);
 }
 
+/* --------------------
+	mobile css
+-----------------------*/
+
 @media screen and (max-width: 500px) {
 	/* header */
 	.header {
-		margin: 1rem auto;
+		margin: 0.8rem auto;
 	}
 	.header .title {
 		font-size: 30px;
