--- a/007.loadingAnimation/sass/loadingAnimation.scss
+++ b/007.loadingAnimation/sass/loadingAnimation.scss
@@ -137,3 +137,28 @@
 		
 	}
 }
+
+.loading3 {
+	background: #774CFF;
+	position: relative;
+	.circle {
+		margin: 0 auto;
+		width: 30px;
+		height: 30px;
+		border: 7px solid #fff;
+		border-left-color: transparent;
+		@include border-radius(50%);
+		@include keyframes(loading3_circle){
+			0% {
+				transform: rotate(0) scale(1);
+			}
+			50% {
+				transform: rotate(180deg) scale(1.3);
+			}
+			100% {
+				transform: rotate(360deg) scale(1);
+			}
+		}
+		@include animation(loading3_circle 0.7s linear infinite);
+	}
+}
